month-1/week-3/review/backend-layer.yaml
# backend-layer.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: my-three-tier-app
    tier: backend
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: my-three-tier-app
    tier: backend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-three-tier-app
      tier: backend
  template:
    metadata:
      labels:
        app: my-three-tier-app
        tier: backend # 关键标签
    spec:
      containers:
      - name: backend-api
        image: mlabouardy/guester-api-go:0.1
        ports:
        - containerPort: 8080
        readinessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 8080
          initialDelaySeconds: 15
          periodSeconds: 10
