month-1/week-3/review/frontend-layer.yaml
# frontend-layer.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  labels:
    app: my-three-tier-app
    tier: frontend
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: my-three-tier-app
    tier: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-three-tier-app
      tier: frontend
  template:
    metadata:
      labels:
        app: my-three-tier-app
        tier: frontend # 关键标签
    spec:
      containers:
      - name: frontend-ui
        image: mlabouardy/guester-ui-react:0.1
        ports:
        - containerPort: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: main-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /?(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
      - path: /api/?(.*)
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 80
